--- a/Research_Heart_Disease_Classification.ipynb
+++ b/Research_Heart_Disease_Classification.ipynb
@@ -16,7 +16,7 @@
         "id": "PajvvjLSi-Lo"
       },
       "source": [
-        "Coding of Models used in Research Paper 'Cardiovascular Disease Prediction Dataset Machine Learning Analysis'.\n",
+        "Coding of Models used in Research Paper 'Cardiovascular Disease Dataset Analysis Using Machine Learning'.\n",
         "\n",
         "\n",
         "---\n",
